# Destiny2_Weapon_Ranker

./: CMakeLists.txt  README.md
src/: Arsenal.cpp  Arsenal.h  Data Generator.cpp  Sort.cpp  Weapon.cpp  Weapon.h  coutTesting.cpp  guns.csv  main.cpp  weapons(real).csv  weapons.csv
src/old data/: Data Generator.cpp  weapons-real.csv
